build_log.txt

> Task :compileJava FAILED
D:\projects\0826_finalproject\StudyLink-Web\src\main\java\com\StudyLink\www\service\MentorProfileService.java:121: error: cannot find symbol
                    UsersDTO usersDTO = new UsersDTO(profile.getUser());
                    ^
  symbol:   class UsersDTO
  location: class MentorProfileService
D:\projects\0826_finalproject\StudyLink-Web\src\main\java\com\StudyLink\www\service\MentorProfileService.java:121: error: cannot find symbol
                    UsersDTO usersDTO = new UsersDTO(profile.getUser());
                                            ^
  symbol:   class UsersDTO
  location: class MentorProfileService
2 errors

[Incubating] Problems report is available at: file:///D:/projects/0826_finalproject/StudyLink-Web/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  D:\projects\0826_finalproject\StudyLink-Web\src\main\java\com\StudyLink\www\service\MentorProfileService.java:121: error: cannot find symbol
                      UsersDTO usersDTO = new UsersDTO(profile.getUser());
                      ^
    symbol:   class UsersDTO
    location: class MentorProfileService
  D:\projects\0826_finalproject\StudyLink-Web\src\main\java\com\StudyLink\www\service\MentorProfileService.java:121: error: cannot find symbol
                      UsersDTO usersDTO = new UsersDTO(profile.getUser());
                                              ^
    symbol:   class UsersDTO
    location: class MentorProfileService
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 4s
1 actionable task: 1 executed
